welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: illegal start of simple expression
		while (!croisement)	}
                                        ^Poucet:7: error: 'while' expected but 'if' found.
	if (c <= 2) { droite()} else { gauche()}
        ^Poucet:8: error: '(' expected but ';' found.
	c = 0
^Poucet:9: error: illegal start of simple expression
	while (!sortieTrouvee)}
                              ^Poucet:10: error: 'while' expected but identifier found.
avance()
^Poucet:15: error: '(' expected but '}' found.
	}
        ^